# FYS-2010-Excercises-Public

./: .gitignore  Ex3_Task1.py  README.md  pyproject.toml
ExerciseSet1/: Exercise_1.ipynb  Exercise_2.ipynb  Exercise_2.py  Exercise_3.ipynb  Exercise_3.py  Exercise_4.ipynb  Exercise_4.py  Exercise_4.txt  Exercise_4_example.py  Exercise_4_plot.py  Exercise_5.ipynb  Exercise_5.py  Exercise_6.ipynb  Exercise_6.py  Exercise_9.py  Task_1.py  Task_2.py  Task_3.py  Task_5.py  Task_6.py
ExerciseSet1/Data/: IM2.mat
ExerciseSet1/misc/: rotated_matrix.csv
ExerciseSet2/: Exercise_1.txt  Exercise_2.py  Exercise_3.ipynb  Exercise_3.py  Exercise_4.ipynb  Exercise_4.py  Exercise_5.ipynb  Exercise_5.py  Exercise_6.ipynb  Exercise_6.py  Task_1.txt  Task_2.py  Task_3.py  Task_4.py  Task_6.py  my_Exercise_2.py  my_Exercise_3.py  my_Exercise_4.py  my_Exercise_5.py  my_Exercise_6.py
ExerciseSet3/: Exercise1.py  Exercise5.py  Exercise6.py  Task1.ipynb  Task1.py  Task2.ipynb  Task2.py  Task4_plotting.py  Task5.py  Task6.py  histogramEQ.ipynb  task4.py
ExerciseSet3/.ipynb_checkpoints/: histogramEQ-checkpoint.ipynb
ExerciseSet4/: Exercise_3.py  Task1.py  Task5.py
ExerciseSet5/: Task1.ipynb  Task1.py  Task2.ipynb  Task2.py  tmp.txt
ExerciseSet5/env/: pyvenv.cfg
ExerciseSet6/: Task1.ipynb  Task1.py  Task2.ipynb  Task2.py  Task3.ipynb  Task3.py
ExerciseSet7/: filterbanks.ipynb  task1.py  task2.py  task3.py
ExerciseSet8/: task2.py
