[project]
name = "fys-2010-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "pyqt5>=5.15.11",
    "scikit-image>=0.25.1",
    "scipy>=1.15.1",
]
